# wis_seednap

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  environment.lock.txt  environment.yml  main.sh  pyproject.toml
config/: config_teleo.sh
config/markers/: mam07.yaml  mam07_dada2.yaml  mifish.yaml  minimal.example.yaml  teleo.yaml  teleo_rhone.yaml
docs/: cli-reference.md  configuration.md  ecotag-setup.md  gbif-export.md  installation.md  pipeline-steps.md  reporting.md  taxonomy-methods.md
docs/example-outputs/: 1_read_tracking.csv  2_otu_table.csv  3_taxonomy_blast.csv  4_sample_manifest_FAIRe.csv  README.md
outputs/: .teleo_state.json
scripts/: RDP_to_GBIFinput.R  dada2_process.R  demultiplex_ligation.sh  ecotag_to_GBIFinput.R  format_blast_outputs.py  functions.R  generate_cutadapt.R  generate_cutadapt_ligation.R  link_taxo_files_ecotag.R  migrate_config_to_steps_model.py  taxo_blast_marker.sh  taxo_dada2_marker.R  taxo_decipher_marker.R  taxo_ecotag_marker.sh
src/seednap/: __init__.py  __version__.py  cli.py
src/seednap/config/: __init__.py  loader.py  manifest.py  manifest_migrate.py  models.py
src/seednap/config/models/: __init__.py  base.py  dada2.py  input.py  operational.py  outputs.py  pipeline.py  swarm.py  taxonomy.py  trimming.py
src/seednap/data/templates/: gbif_template.csv  primers_list.csv
src/seednap/errors/: __init__.py  base.py  catalog.py  config.py  preflight.py
src/seednap/pipeline/: __init__.py  orchestrator.py  state.py
src/seednap/scripts/: dada2_process.R  taxo_decipher_marker.R
src/seednap/steps/: __init__.py  format_gbif.py
src/seednap/steps/cleaning/: __init__.py  processor.py
src/seednap/steps/dada2/: __init__.py  dada2_runner.py  metrics.py  processor.py
src/seednap/steps/formatting/: __init__.py  darwincore_builder.py  gbif_formatter.py  non_target_filter.py  taxonomy_enricher.py  wis_metadata.py
src/seednap/steps/report/: __init__.py  html_report.py  read_tracking.py
src/seednap/steps/swarm/: __init__.py  otu_table_builder.py  processor.py  swarm_runner.py  vsearch_runner.py
src/seednap/steps/taxonomic_assignment/: __init__.py  assigner.py  blast.py  blast_runner.py  dada2_taxonomy_runner.py  decipher_runner.py  ecotag_runner.py
src/seednap/steps/trimming/: __init__.py  cutadapt_runner.py  tag_generator.py  trimming_pipeline.py
src/seednap/utils/: __init__.py  logging.py  r_runner.py  sequences.py  subprocess.py  taxonomy.py
tests/: conftest.py  test_blast.py  test_config.py  test_dada2.py  test_format_gbif.py  test_formatting.py  test_pipeline.py  test_sequences.py  test_taxonomic_assignment.py  test_trimming.py
tests/integration/: test_blast_lca.py  test_darwincore.py  test_ecotag_schema_mapping.py  test_manifest_real_data.py  test_swarm_otu_nonzero.py  test_taxonomy_post_processor.py
tests/unit/: test_canonical_taxonomy_schema.py  test_cleaning.py  test_cleaning_sample_detection.py  test_cli_assign_taxonomy_config.py  test_cli_blast_tempdir.py  test_cli_log_persistence.py  test_config_snapshot.py  test_dada2_by_library.py  test_dada2_sample_names.py  test_dada2_species_required.py  test_darwincore_config_params.py  test_darwincore_dropped_report.py  test_darwincore_eventid_join.py  test_darwincore_step.py  test_demultiplex_robustness.py  test_demultiplex_sample_discovery.py  test_demux_protocol_guard.py  test_ecotag_discovery.py  test_ecotag_schema_mapping.py  test_error_codes_wired.py  test_errors.py  test_example_outputs_docs.py  test_export_staleness.py  test_gbif_contamination.py  test_gbif_log_format.py  test_html_report.py  test_logging_quiet_and_version.py  test_manifest.py  test_monitor.py  test_packaging_metadata.py  test_per_library_from_subdirs.py  test_pipeline_steps.py  test_r_script_packaging.py  test_raw_data_guard.py  test_read_tracking.py  test_repo_standards_files.py  test_report_raw_counts.py  test_step_dispatch_coverage.py  test_subdir_sample_discovery.py  test_swarm_sample_pairing.py  (+9 more)
