[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seednap"
dynamic = ["version"]
description = "Modern eDNA metabarcoding pipeline with DADA2"
authors = [
    {name = "ETH ELE Lab", email = "rzendehdel@ethz.ch"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["edna", "metabarcoding", "dada2", "bioinformatics", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "pandas>=2.2",  # BLAST LCA uses DataFrameGroupBy.apply(include_groups=...)
    "numpy>=1.24",
    "biopython>=1.80",
    "rich>=13.0",
    "jinja2>=3.0",
    "matplotlib>=3.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.22",
]
# WIS database bridge (`seednap wis-metadata`): optional so the core pipeline stays
# dependency-light. psycopg2-binary ships its own libpq, easing install on the server.
wis = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
seednap = "seednap.cli:main"

[project.urls]
Homepage = "https://github.com/WildinSync/wis_seednap"
Documentation = "https://github.com/WildinSync/wis_seednap/blob/main/README.md"
Repository = "https://github.com/WildinSync/wis_seednap"
Issues = "https://github.com/WildinSync/wis_seednap/issues"

[tool.setuptools.dynamic]
version = {attr = "seednap.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seednap = ["py.typed", "data/templates/*.csv", "scripts/*.R"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without explicit strict parameter
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
known-first-party = ["seednap"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "pandas.*",
    "dotenv.*",
    "sqlalchemy.*",
    "psycopg2.*",
]
ignore_missing_imports = true